// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColorVariations en locale 1`] = `
[
  {
    "image_groups": [
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwb93d490a/images/large/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw9a32be45/images/large/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "large",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwb93d490a/images/large/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw9a32be45/images/large/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "small",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, swatch",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "swatch",
      },
    ],
    "variant_url": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=25592581M",
  },
]
`;

exports[`getColorVariations fr locale 1`] = `
[
  {
    "image_groups": [
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwb93d490a/images/large/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, large",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw9a32be45/images/large/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
        ],
        "view_type": "large",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, small",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw08ea0a24/images/small/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, small",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwf89d4457/images/small/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
        ],
        "view_type": "small",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, swatch",
            "dis_base_link": "https://zzgk-008.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
        ],
        "view_type": "swatch",
      },
    ],
    "variant_url": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=25592581M",
  },
]
`;
